feat: add width and height options to Sidebar

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>react-building-blocks example</title>
+
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div id="app"></div>
